# sequencer_benchmark

./: .gitignore  CMakeLists.txt  Dockerfile  run_docker.sh
cmake/: FindCHOLMOD.cmake  FindKNITRO.cmake  FindMosek.cmake
data/benchmark/: 1-backtrack.txt  1-backward.txt  1-beam-100.txt  1-beam-1000.txt  1-bnb.txt  1-forward.txt  1-landmark.txt  10-bnb copy.txt  10-bnb-errorbar.txt  10-bnb.txt  10-greedy-merge.txt  10-landmark.txt  4-beam-100.txt  4-bnb-new.txt  4-bnb.txt  4-forward.txt  4-greedy-merge.txt  4-landmark-new.txt  4-landmark.txt  6-bnb.txt  6-forward.txt  6-greedy-merge.txt  6-landmark.txt
data/benchmark-1/opt-2-landmark-beam-100/: 82469.json
data/benchmark-1/opt-2-landmark-holistic/: 1005278.json  109572.json  1307400.json  237183.json  314000.json  38095.json  72605.json  82469.json  88568.json
data/benchmark-1/opt-holistic/: 108693.json  109176.json  1120761.json  1224385.json  130442.json  1307400.json  237626.json  40847.json  551075.json  613661.json  79787.json  931888.json
data/benchmark-1/opt-recursive-holistic/: 100026.json  100344.json  1005278.json  105348.json  106090.json  1079827.json  108334.json  108446.json  108693.json  109176.json  109572.json  110802.json  1120761.json  1120775.json  112542.json  112998.json  122126.json  1224385.json  125067.json  129891.json  129932.json  130442.json  1307400.json  132447.json  134630.json  136635.json  138208.json  1382595.json  1396906.json  162338.json  162890.json  163740.json  1758046.json  178200.json  200075.json  225949.json  233332.json  237183.json  237626.json  237632.json  (+59 more)
data/benchmark-1/opt-z-landmark-holistic/: 1005278.json  108693.json  109176.json  109572.json  1120761.json  1224385.json  125067.json  130442.json  1307400.json  162890.json  237183.json  237626.json  271303.json  314000.json  314438.json  343548.json  38095.json  383022.json  395052.json  40847.json  45136.json  551075.json  59127.json  613661.json  677340.json  711199.json  72605.json  79787.json  82469.json  83005.json  84622.json  88568.json  89474.json  90441.json  931888.json
data/benchmark-1/search-backtrackgreedy/: 100026.json  105348.json  106090.json  1079827.json  108334.json  108446.json  109176.json  109572.json  1120761.json  112542.json  1224385.json  125067.json  130442.json  1307400.json  134630.json  1382595.json  1396906.json  162338.json  (+46 more)
data/dataset/: 100026.json  100344.json  1005278.json  105348.json  106090.json  1079827.json  108334.json  108446.json  108693.json  109176.json  109572.json  110802.json  1120761.json  1120775.json  112542.json  112998.json  122126.json  1224385.json  125067.json  129891.json  129932.json  130442.json  1307400.json  132447.json  134630.json  136635.json  138208.json  1382595.json  1396906.json  162338.json  162890.json  163740.json  1758046.json  178200.json  200075.json  225949.json  233332.json  237183.json  237626.json  237632.json  (+59 more)
data/mip_heuristics/: roboarch_advanced  roboarch_advanced.json  roboarch_basic.json  roboarch_extensive.json  roboarch_none.json
data/model/: bridge.json
data/roboarch/: test
ext/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/suppl/: CMakeLists.txt  beamsearch_benchmark.h  landmark_benchmark.h  main.cpp
src/libs/: CMakeLists.txt
src/libs/dto/: CMakeLists.txt
src/libs/dto/include/dto/: FrameComplianceDiff.h  FrameTO.h  FrameTOAssemblability.h  FrameTOKnitroSolver.h  FrameTORange.h  FrameTORangeSum.h  FrameTOSIMP.h  FrameTOSIMPKnitroSolver.h  FrameTOSIMPSequence.h  FrameTOSequence.h  FrameTOSequenceDynamicHoldings.h  FrameTOSequenceMono.h  FrameTOSequenceStaticScaffolds.h  FrameTOSequenceStaticScaffoldsSum.h  FrameTOSequenceStaticScaffoldsSumFixedSequence.h  FrameTOSequenceSum.h  FrameTOSupport.h
src/libs/dto/src/: FrameComplianceDiff.cpp  FrameTO.cpp  FrameTOAssemblability.cpp  FrameTORange.cpp  FrameTORangeSum.cpp  FrameTOSIMP.cpp  FrameTOSequence.cpp  FrameTOSequenceDynamicHoldings.cpp  FrameTOSequenceMono.cpp  FrameTOSequenceStaticScaffolds.cpp  FrameTOSequenceStaticScaffoldsSum.cpp  FrameTOSequenceStaticScaffoldsSumFixedSequence.cpp  FrameTOSequenceSum.cpp  FrameTOSupport.cpp
src/libs/frame/: CMakeLists.txt
src/libs/frame/include/frame/: Beam.h  BeamLinearElastic.h  BeamMaterial.h  FrameAssembly.h  FrameAssemblyExternalForces.h  FrameAssemblyFixture.h  FrameAssemblyJoint.h
src/libs/frame/src/: Beam.cpp  BeamLinearElastic.cpp  FrameAssembly.cpp  FrameAssemblyExternalForces.cpp  FrameAssemblyFixture.cpp  FrameAssemblyJoint.cpp
(+4397 files in other folders)
